# workbench

./: README.md  pyproject.toml
.hermes/plans/: 2026-04-23_workbench-v0-plan.md  2026-04-24_workbench-v1-iterations.md  2026-04-24_workbench-v2-plan.md  2026-04-24_workbench-v3-plan.md  2026-04-24_workbench-v4-plan.md
src/workbench/: cli.py  config.py  scaffold.py
src/workbench/templates/base/: .env.example  Makefile
src/workbench/templates/cli/: .gitignore  Makefile  README.md.j2  pyproject.toml.j2
src/workbench/templates/cli/src/{{project_name}}/: cli.py.j2
src/workbench/templates/cli/tests/: test_cli.py.j2
src/workbench/templates/fastapi/: Makefile  README.md.j2  pyproject.toml.j2
src/workbench/templates/fastapi/src/{{project_name}}/: main.py.j2
src/workbench/templates/fastapi/tests/: test_main.py.j2
src/workbench/templates/python/: README.md.j2  pyproject.toml.j2
src/workbench/templates/python/.github/workflows/: test.yml
src/workbench/templates/python/src/{{project_name}}/: core.py.j2
tests/: test_cli.py  test_config.py  test_scaffold.py
